monitoring/overlays/local/grafana/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
spec:
  template:
    spec:
      containers:
        - name: grafana
          # Set the `GF_SECURITY_ADMIN_USER` and `GF_SECURITY_ADMIN_PASSWORD` environment variables
          # using the Secret defined in `grafana-secret.yaml`
          # env:
          #   - name: GF_SECURITY_ADMIN_USER
          #     valueFrom:
          #       secretKeyRef:
          #         name: sensrnet-monitoring-grafana
          #         key: admin-user
          #   - name: GF_SECURITY_ADMIN_PASSWORD
          #     valueFrom:
          #       secretKeyRef:
          #         name: sensrnet-monitoring-grafana
          #         key: admin-password
          resources:
            requests:
              cpu: 200m
              memory: 250M
            limits:
              cpu: 400m
              memory: 500M
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
