monitoring/overlays/local/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - http:
      paths: 
      - path: /internal/grafana
        backend:
            serviceName: grafana
            servicePort: 3000
